@@ -1,9 +1,14 @@
 version 0.4.0 - dd-mmm-yyyy
+ . CocosNode: private methods are private
+ . CocosNode: stop renamed to stopAllActions
+ . CocosNode: children does not use a auxiliar array (by Codemattic)
+ . Director: private methods are private
  . Menu: added setOffsetX
  . MenuItem: renamed to MenuItemFont
  . MenuItem: added MenuItemImage
  . MenuItem: uses target/selector, not receiver/selector
  . MenuItem: MenuItemFont restore scale to 1.0 after being invoked (by Codemattic)
+ . TextureNode: renamed setR:g:b: to setRGB:::
 
 version 0.3.3 - 23-Ago-2008
  . Action: Added CallFuncND. Like CallFuncN but accepts data
